--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
 message(STATUS "Setup ${CMAKE_PROJECT_NAME} build")
 
+add_subdirectory(utils)
+add_subdirectory(platform)
+
 add_executable(${CMAKE_PROJECT_NAME} main.cpp)
 
 pico_enable_stdio_usb(${CMAKE_PROJECT_NAME} 1)
@@ -15,7 +18,7 @@ target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
     MQTT_PASSWORD=\"$ENV{MQTT_PASSWORD}\"
     SW_VERSION=\"${CMAKE_PROJECT_VERSION}\")
 
-target_link_libraries(${CMAKE_PROJECT_NAME} pico_stdlib)
+target_link_libraries(${CMAKE_PROJECT_NAME} utils pico_stdlib)
 
 set(EXECUTABLE_PATH "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_FILE}${CMAKE_PROJECT_NAME}.elf")
 file(WRITE "${CMAKE_BINARY_DIR}/executable_path.txt" "${EXECUTABLE_PATH}\n")
