Add debuging and memory flash SDK set-up

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,5 +20,5 @@
         }
     },
     // "initializeCommand": "openocd -f interface/cmsis-dap.cfg -f target/rp2040.cfg -c 'bindto 0.0.0.0' -c 'adapter speed 5000'",
-    "postCreateCommand": "apt-get update -y && apt-get install --no-install-recommends -y clangd"
+    "postCreateCommand": "apt-get update -y && apt-get install --no-install-recommends -y clangd gdb-multiarch"
 }
