Add WIFI helper function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ message(STATUS "Setup ${CMAKE_PROJECT_NAME} build")
 
 add_subdirectory(utils)
 add_subdirectory(platform)
+add_subdirectory(network)
 
 add_executable(${CMAKE_PROJECT_NAME} main.cpp)
 
@@ -18,7 +19,7 @@ target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
     MQTT_PASSWORD=\"$ENV{MQTT_PASSWORD}\"
     SW_VERSION=\"${CMAKE_PROJECT_VERSION}\")
 
-target_link_libraries(${CMAKE_PROJECT_NAME} utils pico_stdlib)
+target_link_libraries(${CMAKE_PROJECT_NAME} utils network pico_stdlib)
 
 set(EXECUTABLE_PATH "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_FILE}${CMAKE_PROJECT_NAME}.elf")
 file(WRITE "${CMAKE_BINARY_DIR}/executable_path.txt" "${EXECUTABLE_PATH}\n")
