--- a/src/platform/CMakeLists.txt
+++ b/src/platform/CMakeLists.txt
@@ -7,4 +7,5 @@ add_library(${PROJECT_NAME} STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/rtc.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_link_libraries(${PROJECT_NAME} pico_stdlib
-                                           hardware_rtc)
+                                      hardware_rtc
+                                      utils)
